# diary

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  dev.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 2026_07_05_0000-f1a2b3c4d5e6_add_photo.py  2026_07_07_1508-e37117210965_add_search_and_fk_indexes.py  2026_07_10_1200-a7c3e9d21b04_null_safe_full_name_trgm.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: dashboard.py  dependencies.py  disciplines.py  grades.py  groups.py  students.py  teachers.py  users.py
src/routes/: auth.py  disciplines.py  grades.py  groups.py  seed.py  students.py  teachers.py
src/schemas/: common.py  dashboard.py  grades.py  students.py  teachers.py  users.py
src/services/: auth.py  cache.py  email.py  pagination.py  rate_limit.py  (+3 more)
static/: main.js  style.css
templates/: _detail.html  _list.html  _pagination.html  base.html  discipline.html  disciplines.html  email.html  grade.html  grades.html  group.html  groups.html  index.html  student.html  students.html  students_with_grades.html  teacher.html  teachers.html  top_10_students.html
tests/: conftest.py  test_correctness_regressions.py  test_main.py  test_route_auth.py  test_route_crud.py  test_route_refresh.py  test_route_seed.py  test_templates_markup.py  test_unit_repository_groups.py  test_unit_repository_students.py  test_unit_repository_teachers.py  test_unit_security.py  test_unit_uploads.py
(+13 files in other folders)
